--- a/adndroid/Lab3/app/build.gradle
+++ b/adndroid/Lab3/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.eragoo.cdu_labs.andoroid.lab3'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.eragoo.cdu_labs.andoroid.lab3"
-        minSdk 29
-        targetSdk 32
+        minSdk 33
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -23,6 +23,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildFeatures{
+        viewBinding true
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -34,12 +39,13 @@ android {
 apply plugin: 'kotlin-kapt'
 
 dependencies {
-    def room_version = "2.4.0-alpha03" // check latest version from docs
+    implementation "androidx.room:room-ktx:2.5.0-beta01"
+    kapt "androidx.room:room-compiler:2.5.0-beta01"
 
-    implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
