--- a/adndroid/Lab3/app/src/main/AndroidManifest.xml
+++ b/adndroid/Lab3/app/src/main/AndroidManifest.xml
@@ -10,10 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Lab3"
-        tools:targetApi="31">
+        android:theme="@style/Theme.Lab3">
         <activity
-            android:name=".MainActivity"
+            android:name=".view.AddUserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
