--- a/adndroid/Lab3/app/build.gradle
+++ b/adndroid/Lab3/app/build.gradle
@@ -39,6 +39,8 @@ android {
 apply plugin: 'kotlin-kapt'
 
 dependencies {
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "androidx.room:room-ktx:2.5.0-beta01"
     kapt "androidx.room:room-compiler:2.5.0-beta01"
 
