Added be in docker-compose.yml

--- a/patterns/transactional-outbox/transactional-outbox/build.gradle
+++ b/patterns/transactional-outbox/transactional-outbox/build.gradle
@@ -18,6 +18,10 @@ repositories {
     mavenCentral()
 }
 
+bootJar {
+    archiveName = "core.jar"
+}
+
 dependencies {
     implementation 'com.vladmihalcea:hibernate-types-52:2.14.0'
 
